# caliber

./: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml  rank.py  requirements.txt  submission.csv  submission_metadata.yaml
docs/: ARCHITECTURE.md  STRATEGY.md
eval/: agreement.py  anchors.json  anchors.py  evaluate.py  heuristics.py  manual_grades.json  metrics.py  rubric.py  sampling.py  sweep.py
sandbox/: README.md  app.py  bench_rerank.py  requirements.txt
sandbox/demo_data/: demo_candidates.jsonl
sandbox/demo_data/artifacts/: candidate_emb.npy  candidate_ids.npy  faiss.index  jd_profile.json
scripts/: build_demo_sample.py  download_cross_encoder.py  make_silver_labels.py  precompute.py  profile_data.py  train_ltr.py
src/caliber/: __init__.py  behavioral.py  config.py  cross_encoder.py  embeddings.py  features.py  fusion.py  honeypot.py  index.py  io_utils.py  jd_profile.py  ltr.py  ranker.py  reasoning.py  schema.py  scorer.py
tests/: __init__.py  test_behavioral.py  test_cross_encoder.py  test_embeddings.py  test_evaluate.py  test_features.py  test_fusion.py  test_honeypot.py  test_index.py  test_io_utils.py  test_ltr.py  test_metrics.py  test_network_isolation.py  test_rank.py  test_ranker.py  test_reasoning.py  test_schema.py  test_scorer.py  test_silver_labels.py  test_sweep.py
