# Package/import configuration ONLY.
#
# This file exists so `pip install -e .` makes `import caliber` work from any
# directory (no more `cd src` friction). It deliberately does NOT pin runtime
# dependencies: requirements.txt remains the single source of truth for the
# exact, interoperable version pins (numpy<2 ABI, CPU-only torch, faiss, etc.).
# Keeping deps out of here avoids two drifting lists.
#
# It complements conftest.py (which puts src/ on sys.path for the test run), so
# the suite passes whether or not the package is installed.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "caliber"
version = "0.0.0"
description = "Intelligent Candidate Discovery & Ranking (Redrob Track 1)"
requires-python = ">=3.11"
# Runtime dependencies are pinned in requirements.txt, not here, on purpose.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["caliber*"]
